--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
+        "express": "^4.18.2",
         "w3-css": "^4.1.0"
     }
 }
