--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.2",
     "graphql": "^15.4.0",
-    "@apollo/client": "^3.5.8"
+    "@apollo/client": "^3.5.8",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
