--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "graphql": "^15.4.0",
     "@apollo/client": "^3.5.8",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "dotenv": "^16.0.3"
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
