--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^5.9.10",
       "apollo-server-express": "^3.6.2",
-      "graphql": "^16.3.0"
+      "graphql": "^16.3.0",
+      "dotenv": "^16.0.3"
     },
     "devDependencies": {
       "nodemon": "^2.0.3"
